--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -5,8 +5,17 @@
         height: 25px;
     }
 
+    .menu {
+
+        &__link {
+            font-family: $fontSecondary;
+            text-transform: uppercase;
+        }
+    }
 }
 
 .navbar-light .navbar-toggler {
     border: none;
 }
+
+
