--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,40 @@ body {
 .navbar .menu__link {
   font-family: "PT Mono", monospace;
   text-transform: uppercase;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: #000000;
+  position: relative;
+  overflow: hidden;
+}
+
+.navbar .menu__link::after {
+  content: "";
+  background: rgba(113, 0, 225, 0.1);
+  position: absolute;
+  left: 15px;
+  bottom: 0px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  z-index: -1;
+  -webkit-transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
+  transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
+}
+
+.navbar .menu__link:hover:after {
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 100%;
+  background: rgba(113, 0, 225, 0.2);
+}
+
+.navbar .menu__link--active {
+  color: #7100E1;
+}
+
+.navbar .menu__link:hover {
+  color: #490092;
 }
 
 .navbar-light .navbar-toggler {
