--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -10,6 +10,42 @@
         &__link {
             font-family: $fontSecondary;
             text-transform: uppercase;
+            padding: $spacingXSmall;
+            text-decoration: none;
+            color: $black;
+            position: relative;
+            overflow: hidden;
+
+            // Spring/bounce effect: https://codepen.io/markmead/pen/drORWG
+
+                &::after {
+                    content: "";
+                    background: rgba($indigoPrimary, 0.10);
+                    position: absolute;
+                    left: 15px;
+                    bottom: 0px;
+                    width: calc(100% - 20px);
+                    height: calc(100% - 20px);
+                    z-index: -1;
+                    transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
+                }
+
+                &:hover:after {
+                    left: 0;
+                    bottom: -2px;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba($indigoPrimary, 0.20);
+                }
+
+            &--active {
+                color: $indigoPrimary;
+            }
+
+            &:hover {
+                color: $indigoDark;
+            }
+
         }
     }
 }
@@ -17,5 +53,4 @@
 .navbar-light .navbar-toggler {
     border: none;
 }
-
 
