--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,15 @@ body {
   height: 25px;
 }
 
+.navbar .menu__nav {
+  margin: 1rem 0;
+}
+
+.navbar .menu__item {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .navbar .menu__link {
   font-family: "PT Mono", monospace;
   text-transform: uppercase;
@@ -28,7 +37,7 @@ body {
   background: rgba(113, 0, 225, 0.1);
   position: absolute;
   left: 15px;
-  bottom: 0px;
+  bottom: 5px;
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   z-index: -1;
@@ -38,7 +47,7 @@ body {
 
 .navbar .menu__link:hover:after {
   left: 0;
-  bottom: -2px;
+  bottom: 0px;
   width: 100%;
   height: 100%;
   background: rgba(113, 0, 225, 0.2);
@@ -50,6 +59,9 @@ body {
 
 .navbar .menu__link:hover {
   color: #490092;
+  margin: 1rem;
+  margin-right: 0;
+  padding-right: 3rem;
 }
 
 .navbar-light .navbar-toggler {
