--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -7,6 +7,15 @@
 
     .menu {
 
+        &__nav {
+            margin: $spacingSmall 0;
+        }
+
+        &__item {
+        margin-top: $spacingXSmall;
+        margin-bottom: $spacingXSmall;
+        }
+
         &__link {
             font-family: $fontSecondary;
             text-transform: uppercase;
@@ -23,7 +32,7 @@
                     background: rgba($indigoPrimary, 0.10);
                     position: absolute;
                     left: 15px;
-                    bottom: 0px;
+                    bottom: 5px;
                     width: calc(100% - 20px);
                     height: calc(100% - 20px);
                     z-index: -1;
@@ -32,7 +41,7 @@
 
                 &:hover:after {
                     left: 0;
-                    bottom: -2px;
+                    bottom: 0px;
                     width: 100%;
                     height: 100%;
                     background: rgba($indigoPrimary, 0.20);
@@ -44,6 +53,9 @@
 
             &:hover {
                 color: $indigoDark;
+                margin: $spacingSmall;
+                margin-right: 0;                
+                padding-right: $spacingSmall*3;
             }
 
         }
