added new title and headings in hero

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,5 +1,7 @@
 body {
     font-family: $fontPrimary;
     color: #000000;
-    
+    margin-top: 76px;
+    margin-left: $spacingMedium;
+    margin-right: $spacingMedium;
 }
