--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -5,6 +5,10 @@
         height: 25px;
     }
 
+    .container-fluid {
+        padding: 0 $spacingSmall;
+    }
+
     .menu {
 
         &__nav {
