--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -22,7 +22,11 @@ $headingSmall: 30px;
 $headingMedium: 40px;
 $headingLarge: 50px;
 
+$weightSmall: 400;
+$weightLarge: 700;
+
 // SPACING
 
 $spacingXSmall: 0.5rem;
 $spacingSmall: 1rem;
+$spacingMedium: 2rem;
