--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
 body {
   font-family: "Sen", sans-serif;
   color: #000000;
+  margin-top: 76px;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .svg {
@@ -11,6 +14,10 @@ body {
 .navbar__menu-btn {
   width: 25px;
   height: 25px;
+}
+
+.navbar .container-fluid {
+  padding: 0 1rem;
 }
 
 .navbar .menu__nav {
@@ -66,5 +73,27 @@ body {
 
 .navbar-light .navbar-toggler {
   border: none;
+}
+
+.hero__illustration {
+  width: 80%;
+  display: block;
+  margin: 1rem auto;
+  padding: 1rem 0;
+}
+
+.hero__heading {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 700;
+  font-size: 50px;
+}
+
+.hero__heading--dark {
+  color: #7100E1;
+}
+
+.hero__subheading {
+  font-family: "PT Mono", monospace;
+  font-size: 30px;
 }
 /*# sourceMappingURL=main.css.map */
