--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -13,10 +13,10 @@ $fontPrimary: 'Sen', sans-serif;
 $fontSecondary: 'PT Mono', monospace;
 $fontHeading: 'Libre Baskerville', serif;
 
-$fontXSmall: 10px;
-$fontSmall: 12px;
-$fontMedium: 14px;
-$fontLarge: 16px;
+$fontXSmall: 18px;
+$fontSmall: 20px;
+$fontMedium: 22px;
+$fontLarge: 25px;
 
 $headingSmall: 30px;
 $headingMedium: 40px;
@@ -30,3 +30,5 @@ $weightLarge: 700;
 $spacingXSmall: 0.5rem;
 $spacingSmall: 1rem;
 $spacingMedium: 2rem;
+$spacingLarge: 3rem;
+$spacingXLarge: 4rem;
