--- a/css/main.css
+++ b/css/main.css
@@ -110,295 +110,295 @@ body {
 
 @-webkit-keyframes cray {
   2% {
-    font-weight: 100;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  4% {
+    font-weight: 500;
     font-style: normal;
     text-decoration: line-through;
     text-transform: none;
   }
-  4% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
   6% {
     font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: none;
   }
   8% {
     font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
+    font-style: italic;
+    text-decoration: underline;
     text-transform: none;
   }
   10% {
-    font-weight: 300;
+    font-weight: 500;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   12% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   14% {
-    font-weight: 100;
-    font-style: normal;
-    text-decoration: line-through;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none;
     text-transform: none;
   }
   16% {
-    font-weight: 300;
+    font-weight: 700;
     font-style: italic;
-    text-decoration: line-through;
+    text-decoration: none;
     text-transform: none;
   }
   18% {
-    font-weight: 600;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   20% {
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
-    text-decoration: line-through;
+    text-decoration: underline;
     text-transform: none;
   }
   22% {
-    font-weight: 300;
+    font-weight: 100;
     font-style: normal;
     text-decoration: none;
     text-transform: uppercase;
   }
   24% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
-    text-decoration: line-through;
-    text-transform: capitalize;
+    text-decoration: underline;
+    text-transform: none;
   }
   26% {
-    font-weight: 400;
-    font-style: italic;
+    font-weight: 200;
+    font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   28% {
-    font-weight: 700;
-    font-style: normal;
+    font-weight: 500;
+    font-style: italic;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: none;
   }
   30% {
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
+    text-decoration: underline;
+    text-transform: none;
   }
   32% {
-    font-weight: 700;
-    font-style: normal;
-    text-decoration: none;
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: underline;
     text-transform: uppercase;
   }
   34% {
-    font-weight: 100;
+    font-weight: 700;
     font-style: normal;
-    text-decoration: line-through;
+    text-decoration: none;
     text-transform: none;
   }
   36% {
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   38% {
-    font-weight: 300;
-    font-style: italic;
-    text-decoration: underline;
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
     text-transform: none;
   }
   40% {
-    font-weight: 100;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   42% {
-    font-weight: 500;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   44% {
-    font-weight: 100;
+    font-weight: 200;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   46% {
-    font-weight: 500;
-    font-style: italic;
+    font-weight: 400;
+    font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   48% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
     text-decoration: underline;
     text-transform: none;
   }
   50% {
-    font-weight: 100;
-    font-style: normal;
+    font-weight: 400;
+    font-style: italic;
     text-decoration: none;
     text-transform: none;
   }
   52% {
-    font-weight: 300;
-    font-style: italic;
+    font-weight: 100;
+    font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   54% {
     font-weight: 200;
-    font-style: italic;
+    font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   56% {
     font-weight: 400;
     font-style: normal;
     text-decoration: none;
-    text-transform: none;
+    text-transform: lowercase;
   }
   58% {
-    font-weight: 600;
+    font-weight: 100;
     font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: uppercase;
   }
   60% {
     font-weight: 100;
-    font-style: italic;
+    font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   62% {
-    font-weight: 700;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   64% {
-    font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  66% {
-    font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  68% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
-  }
-  70% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: lowercase;
-  }
-  72% {
-    font-weight: 300;
-    font-style: italic;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-  74% {
-    font-weight: 100;
-    font-style: normal;
-    text-decoration: line-through;
-    text-transform: none;
-  }
-  76% {
-    font-weight: 500;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  78% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  80% {
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  82% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  84% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: line-through;
-    text-transform: uppercase;
-  }
-  86% {
-    font-weight: 500;
-    font-style: italic;
-    text-decoration: none;
-    text-transform: capitalize;
-  }
-  88% {
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  90% {
     font-weight: 300;
     font-style: normal;
     text-decoration: underline;
     text-transform: none;
   }
-  92% {
+  66% {
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  68% {
+    font-weight: 500;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
+  70% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  72% {
     font-weight: 300;
     font-style: italic;
     text-decoration: none;
     text-transform: none;
   }
-  94% {
+  74% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  76% {
     font-weight: 500;
     font-style: normal;
     text-decoration: line-through;
+    text-transform: capitalize;
+  }
+  78% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  80% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
     text-transform: lowercase;
   }
-  96% {
+  82% {
+    font-weight: 100;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  84% {
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  86% {
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: line-through;
+    text-transform: lowercase;
+  }
+  88% {
+    font-weight: 600;
+    font-style: italic;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  90% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  92% {
     font-weight: 500;
     font-style: italic;
     text-decoration: none;
+    text-transform: none;
+  }
+  94% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
     text-transform: uppercase;
   }
+  96% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
   98% {
-    font-weight: 100;
+    font-weight: 700;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
@@ -407,295 +407,295 @@ body {
 
 @keyframes cray {
   2% {
-    font-weight: 100;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  4% {
+    font-weight: 500;
     font-style: normal;
     text-decoration: line-through;
     text-transform: none;
   }
-  4% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
   6% {
     font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: none;
   }
   8% {
     font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
+    font-style: italic;
+    text-decoration: underline;
     text-transform: none;
   }
   10% {
-    font-weight: 300;
+    font-weight: 500;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   12% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   14% {
-    font-weight: 100;
-    font-style: normal;
-    text-decoration: line-through;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none;
     text-transform: none;
   }
   16% {
-    font-weight: 300;
+    font-weight: 700;
     font-style: italic;
-    text-decoration: line-through;
+    text-decoration: none;
     text-transform: none;
   }
   18% {
-    font-weight: 600;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   20% {
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
-    text-decoration: line-through;
+    text-decoration: underline;
     text-transform: none;
   }
   22% {
-    font-weight: 300;
+    font-weight: 100;
     font-style: normal;
     text-decoration: none;
     text-transform: uppercase;
   }
   24% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
-    text-decoration: line-through;
-    text-transform: capitalize;
+    text-decoration: underline;
+    text-transform: none;
   }
   26% {
-    font-weight: 400;
-    font-style: italic;
+    font-weight: 200;
+    font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   28% {
-    font-weight: 700;
-    font-style: normal;
+    font-weight: 500;
+    font-style: italic;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: none;
   }
   30% {
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
+    text-decoration: underline;
+    text-transform: none;
   }
   32% {
-    font-weight: 700;
-    font-style: normal;
-    text-decoration: none;
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: underline;
     text-transform: uppercase;
   }
   34% {
-    font-weight: 100;
+    font-weight: 700;
     font-style: normal;
-    text-decoration: line-through;
+    text-decoration: none;
     text-transform: none;
   }
   36% {
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   38% {
-    font-weight: 300;
-    font-style: italic;
-    text-decoration: underline;
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
     text-transform: none;
   }
   40% {
-    font-weight: 100;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   42% {
-    font-weight: 500;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   44% {
-    font-weight: 100;
+    font-weight: 200;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   46% {
-    font-weight: 500;
-    font-style: italic;
+    font-weight: 400;
+    font-style: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
   }
   48% {
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
     text-decoration: underline;
     text-transform: none;
   }
   50% {
-    font-weight: 100;
-    font-style: normal;
+    font-weight: 400;
+    font-style: italic;
     text-decoration: none;
     text-transform: none;
   }
   52% {
-    font-weight: 300;
-    font-style: italic;
+    font-weight: 100;
+    font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   54% {
     font-weight: 200;
-    font-style: italic;
+    font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   56% {
     font-weight: 400;
     font-style: normal;
     text-decoration: none;
-    text-transform: none;
+    text-transform: lowercase;
   }
   58% {
-    font-weight: 600;
+    font-weight: 100;
     font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: uppercase;
   }
   60% {
     font-weight: 100;
-    font-style: italic;
+    font-style: normal;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: none;
   }
   62% {
-    font-weight: 700;
+    font-weight: 300;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
   }
   64% {
-    font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  66% {
-    font-weight: 600;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  68% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: capitalize;
-  }
-  70% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: lowercase;
-  }
-  72% {
-    font-weight: 300;
-    font-style: italic;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-  74% {
-    font-weight: 100;
-    font-style: normal;
-    text-decoration: line-through;
-    text-transform: none;
-  }
-  76% {
-    font-weight: 500;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  78% {
-    font-weight: 200;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  80% {
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  82% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  84% {
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: line-through;
-    text-transform: uppercase;
-  }
-  86% {
-    font-weight: 500;
-    font-style: italic;
-    text-decoration: none;
-    text-transform: capitalize;
-  }
-  88% {
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    text-transform: none;
-  }
-  90% {
     font-weight: 300;
     font-style: normal;
     text-decoration: underline;
     text-transform: none;
   }
-  92% {
+  66% {
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  68% {
+    font-weight: 500;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
+  70% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  72% {
     font-weight: 300;
     font-style: italic;
     text-decoration: none;
     text-transform: none;
   }
-  94% {
+  74% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  76% {
     font-weight: 500;
     font-style: normal;
     text-decoration: line-through;
+    text-transform: capitalize;
+  }
+  78% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  80% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
     text-transform: lowercase;
   }
-  96% {
+  82% {
+    font-weight: 100;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  84% {
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  86% {
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: line-through;
+    text-transform: lowercase;
+  }
+  88% {
+    font-weight: 600;
+    font-style: italic;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  90% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  92% {
     font-weight: 500;
     font-style: italic;
     text-decoration: none;
+    text-transform: none;
+  }
+  94% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
     text-transform: uppercase;
   }
+  96% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
   98% {
-    font-weight: 100;
+    font-weight: 700;
     font-style: normal;
     text-decoration: none;
     text-transform: none;
@@ -722,5 +722,78 @@ body {
 .hero__arrow {
   font-size: 40px;
   text-align: center;
+}
+
+.sectionheading {
+  font-family: "PT Mono", monospace;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.project {
+  margin-bottom: 3rem;
+}
+
+.project__visual {
+  width: 300px;
+  height: 200px;
+  background-color: #D8B4FF;
+  border: solid black;
+  border-color: black;
+  border-width: 3px 4px 3px 5px;
+  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
+  -webkit-transform: rotate(2deg);
+          transform: rotate(2deg);
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.project__visual--hidden {
+  display: none;
+}
+
+.project__img {
+  display: block;
+  overflow: hidden;
+  width: 300px;
+  height: 200px;
+  background-color: #D8B4FF;
+  border: solid black;
+  border-color: black;
+  border-width: 3px 4px 3px 5px;
+  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
+  -webkit-transform: rotate(1deg);
+          transform: rotate(1deg);
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.project__img--hidden {
+  display: none;
+}
+
+.project__title {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 700;
+  font-size: 30px;
+  margin: 0;
+  line-height: 200px;
+  vertical-align: middle;
+  text-align: center;
+  display: block;
+}
+
+.project__title--hidden {
+  display: none;
+}
+
+.project__link {
+  font-family: "PT Mono", monospace;
+  text-decoration: none;
+  color: #000000;
+  font-size: 20px;
 }
 /*# sourceMappingURL=main.css.map */
