added projects and fixed projectview

--- a/src/scss/partials/_project.scss
+++ b/src/scss/partials/_project.scss
@@ -1,6 +1,10 @@
 .project {
     margin-bottom: $spacingLarge;
 
+    a {
+        text-decoration: none;
+        color: $black;
+    }
 
 
     &__visual {
