finished mobile version

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,5 @@
 @import './partials/project';
 @import './partials/about';
 @import './partials/skills';
+@import './partials/contact';
+@import './partials/copyright';
