--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -6,7 +6,7 @@
 
     &__img {
         width: 100%;
-        margin: $spacingSmall 0 $spacingMedium 0;
+        margin: $spacingSmall auto $spacingMedium auto;
     }
 
     &__focustext {
