added desktop media-tag for hero

--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -17,5 +17,10 @@
         &__link {
             color: $indigoPrimary;
             font-size: $fontMedium;
+
+            &:hover {
+                color: $indigoPrimary;
+
+            }
         }
 }
