--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -108,3 +108,41 @@
 }
 
 
+@media only screen and (min-width: $breakDesktop) {
+    .hero {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        &__section {
+            margin-top: 60px;
+        }
+
+
+        &__illustration {
+            min-width: 600px;
+            margin: 0;
+        }
+
+        &__heading {
+            font-size: $headingLarge;
+        }
+
+        &__subheading {
+            font-size: $desktopMedium;
+        }
+
+        &__location {
+            font-size: $desktopSmall;
+        }
+
+        &__description {
+            font-size: $desktopMedium;
+            margin-top: 100px;
+        }
+
+        &__support {
+            font-size: $desktopSmall;
+        }
+    }
+}
