--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -18,9 +18,13 @@ $fontSmall: 20px;
 $fontMedium: 22px;
 $fontLarge: 25px;
 
+$desktopSmall: 30px;
+$desktopMedium: 40px;
+$desktopLarge: 50px;
+
 $headingSmall: 30px;
 $headingMedium: 40px;
-$headingLarge: 50px;
+$headingLarge: 80px;
 
 $weightSmall: 400;
 $weightLarge: 700;
@@ -32,3 +36,9 @@ $spacingSmall: 1rem;
 $spacingMedium: 2rem;
 $spacingLarge: 3rem;
 $spacingXLarge: 4rem;
+
+// BREAKPOINTS
+
+$breakMobile: 400px;
+$breakTablet: 800px;
+$breakDesktop: 1200px;
