media tag for projects desktop

--- a/src/scss/partials/_project.scss
+++ b/src/scss/partials/_project.scss
@@ -131,3 +131,46 @@
     align-items:center;
     margin-bottom: $spacingMedium;
 }
+
+
+@media only screen and (min-width: 1000px) {
+    .project { 
+        display: flex;
+        justify-content: space-between;
+        margin: 50px 100px;
+
+        &__visual {
+            width: 580px;
+
+        }
+
+        &__img {
+            width: 580px;
+            height: 400px;
+            margin: 0;
+        }
+        &__text {
+            margin-left: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+        }
+
+        &__desc {
+            font-size: $desktopSmall;
+        }
+
+        &__link {
+            font-size: $desktopSmall;
+
+        }
+
+    }
+
+    .carousel-inner {
+        width: 580px;
+        height: 400px;
+    }
+
+}
+
