--- a/src/scss/partials/_project.scss
+++ b/src/scss/partials/_project.scss
@@ -133,7 +133,7 @@
 }
 
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: $breakDesktop) {
     .project { 
         display: flex;
         justify-content: space-between;
