added desktop styles for contact and navbar

--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -79,3 +79,18 @@
     }
 }
 
+@media only screen and (min-width: $breakDesktop) {
+    .navbar {
+
+        &__logo {
+            margin-left: 100px;
+
+        }
+        
+        .menu {
+            &__nav {
+                margin-right: 100px;
+            }
+        }
+    }
+}
