--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -26,5 +26,29 @@
 }
 
 @media only screen and (min-width: $breakDesktop) {
-    
+    .contact {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 50px 100px;
+
+        &__text {
+            font-size: $desktopSmall;
+            margin: 0 0 50px 100px;
+        }
+
+        &__link {
+            font-size: $desktopSmall;
+
+        }
+
+
+        &__desc {
+            order: 2;
+        }
+
+        &__img {
+            order: 1;
+        }
+    }
 }
