--- a/src/scss/partials/_sectionheading.scss
+++ b/src/scss/partials/_sectionheading.scss
@@ -6,7 +6,7 @@
 
 }
 
-@media only screen and (min-width: $breakDesktop) {
+@media only screen and (min-width: $breakMobile) {
 
     .sectionheading {
         font-size: $headingMedium;
