--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -24,6 +24,7 @@ $desktopLarge: 50px;
 
 $headingSmall: 30px;
 $headingMedium: 40px;
+$headingTablet: 60px;
 $headingLarge: 80px;
 
 $weightSmall: 400;
@@ -39,6 +40,6 @@ $spacingXLarge: 4rem;
 
 // BREAKPOINTS
 
-$breakMobile: 400px;
+$breakMobile: 540px;
 $breakTablet: 800px;
 $breakDesktop: 1200px;
