--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -185,3 +185,41 @@
             }
         }
 }
+
+@media only screen and (min-width: $breakTablet) and (max-width: $breakDesktop) {
+    .hero {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        &__section {
+            margin-top: 50px;
+        }
+
+        &__illustration {
+            min-width: 300px;
+            margin: 0;
+        }
+
+        &__heading {
+            font-size: $headingTablet;
+        }
+
+        &__subheading {
+            font-size: $desktopMedium;
+        }
+
+        &__location {
+            font-size: $desktopSmall;
+        }
+
+        &__description {
+            font-size: $desktopMedium;
+            margin-top: 50px;
+        }
+
+        &__support {
+            font-size: $desktopSmall;
+        }
+    }
+}
